@@ -21,7 +21,7 @@ public enum PhysicalPropertyType {
    * @return PhysicalPropertyType object
    */
   public static PhysicalPropertyType byName(String name) {
-    if (name == null || name.isBlank()) {
+    if (name == null || name.trim().isEmpty()) {
       throw new RuntimeException(new InvalidInputException("PhysicalPropertyType", "byName",
           "name", "cannot be null or empty."));
     }
